--- a/css/style.css
+++ b/css/style.css
@@ -1371,9 +1371,6 @@ textarea{
   flex-direction: row-reverse;
 }
 
-
-
-
 .blog_item_text:before{
   content: "";
   position: absolute;
@@ -1385,10 +1382,9 @@ textarea{
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 28px 35px 0px 0px;
-  border-color: transparent #ff0 transparent transparent;
+  border-width: 0 28px 35px 28px;
+  border-color: transparent transparent #e74c3c transparent;
 }
-
 
 .blog_item:nth-child(4n) .blog_item_text:before, 
 .blog_item:nth-child(4n-1) .blog_item_text:before{
@@ -1402,8 +1398,8 @@ textarea{
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 28px 35px 0px 0px;
-  border-color: transparent #ff0 transparent transparent;
+border-width: 0 28px 35px 28px;
+border-color: transparent transparent #e74c3c transparent;
 }
 
 
