--- a/css/style.css
+++ b/css/style.css
@@ -692,12 +692,18 @@ text-align: right;
 }
 
 /* Start Mixitup filtering plugin */
-.mixitup-control-active {
-    border-bottom: 3px dotted #e74c3c;
+
+input[type=radio   ]:not(old){
+  width     : 1em;
+  margin    : 0;
+  padding   : 0;
+  font-size : 1em;
+  opacity   : 0;
 }
 
-
-
+input[type="radio"]:checked+label{
+  border-bottom: 2px dotted #e74c3c;
+}
 
 /* End Mixitup filtering plugin */
 /* End portfolio_section */
