--- a/css/style.css
+++ b/css/style.css
@@ -714,56 +714,61 @@ input[type="radio"]:checked+label{
 
 /* End Mixitup filtering plugin */
 /* End portfolio_section */
-/* Start casestudy_section */
-.casestudy_section{
-  background-color: #f4f5f9;
-  padding-top: 150px;
-  padding-bottom: 150px;
-}
-
-.slider_item_box{
-  padding-top: 40px;
-  padding-bottom: 40px;
-  position: relative;
-  min-height: 600px;
-
-}
-
-
-.slider_item_background{
+/* Start OLD_casestudy_section */
+/*.slider_item_background{
   width: 50%;
   height: 100%;
+
   position: absolute;
-  /*z-index: 0;*/
   top: 0;
   right: 0;
-  border: 1px dotted black;
-  background-color: #fff999;
+
   background-repeat: no-repeat;
-  -webkit-background-size: cover;
   background-size: cover;
 }
 
 .slider_item{
   width: 60%;
   position: absolute;
-
-
   background-color: #fff;
   text-align: center;
   padding-top: 80px;
   padding-bottom: 40px;
   padding-left: 30px;
   padding-right: 30px;
-
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); 
+}*/
+/* End OLD_casestudy_section */
+/* Start new_casestudy_section */
+.new_casestudy_section{
+  background-color: #f4f5f9;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.new_casestudy_slide_bg{
+  min-height: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+
+
+
+/* Start new slider item */
+.slider_item_box{
+  padding-top: 40px;
+  padding-bottom: 40px;
+  position: relative;
+  min-height: 600px;
 }
 
 .slider_item_heading{
   font-size: 18px;
   font-family: "Open Sans";
   color: rgb(106, 106, 106);
-
   line-height: 1.2;
   text-align: center;
   position: relative;
@@ -791,11 +796,12 @@ input[type="radio"]:checked+label{
   margin-top: 20px;
 }
 
-.slider_item button{
+.new_slider_item button{
   margin-top: 40px;
   margin-bottom: 20px;
 }
-
+/* End new slider item */
+/* Start squares for slider */
 .square_decorative_box{
   padding-top: 20px;
   padding-bottom: 20px;
@@ -820,6 +826,7 @@ input[type="radio"]:checked+label{
   position: relative;
   z-index: 2;
 }
+
 .square_icon_box img {
   width: 22px!important; /* resist to slider styles */
   position: absolute;
@@ -832,16 +839,8 @@ input[type="radio"]:checked+label{
   -ms-transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
   transform: rotate(-135deg);
-  }
-
-/* End casestudy_section */
-/* Start new_casestudy_section */
-
-.new_casestudy_slide_bg{
-  min-height: 600px;
 }
-
-
+/* End squares for slider */
 /* End new_casestudy_section */
 /* Start numbers_section */
 .numbers_section{
